--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FakeIM</string>
+    <string name="label_edit">Edit</string>
+    <string name="label_done">Done</string>
+    <string name="label_delete_message">Delete Message</string>
 </resources>
